# podcast-transcriber

./: .gitignore  Dockerfile  README.md  pyproject.toml  transcriber.py
.github/workflows/: image-build-scan.yml
