[tool.poetry]
name = "podcast-transcriber"
version = "0.1.0"
description = ""
authors = ["Ashley Felton <ashley@ropable.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "6.0.11"
requests = "2.32.3"
numba = "0.60.0"
openai-whisper = "20240930"
python-slugify = "8.0.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
